fix: text align left bei Teilnahme Schritten, da sonst manchmal? nicht aligned

--- a/sass/inhalt/ansprache/_teilnahme.sass
+++ b/sass/inhalt/ansprache/_teilnahme.sass
@@ -10,6 +10,7 @@
 			//display: inline-flex
 			//align-items: flex-end
 			margin-left: calc(var(--zahl-schriftgröße) + var(--zahl-gap))
+			text-align: left
 			&::before
 				content: attr(data-schritt) "."
 				margin-left: calc(-1 * var(--zahl-gap))
